# phosh-osk-stub

./: .dir-locals.el  .gitignore  .gitlab-ci.yml  .packit.yaml  HACKING.md  NEWS  README.md  gcovr.cfg  meson.build  meson_options.txt  phosh-osk-stub.doap  phosh-osk-stub.spec  pos-config.h.in  run.in
.gitlab-ci/: debian.Dockerfile  run-docker.sh  uncrustify.cfg
data/: keymap.txt  meson.build  mobi.phosh.OskStub.metainfo.xml.in  sm.puri.OSK0.desktop.in.in  sm.puri.Phosh.OskStub.metainfo.xml.in  sm.puri.phosh.osk.gschema.xml
data/completers/: hunspell.desktop.in  meson.build  presage.completer.in
debian/: changelog  control  copyright  gbp.conf  phosh-osk-stub-doc.install  phosh-osk-stub.alternatives  phosh-osk-stub.install  phosh-osk-stub.links  phosh-osk-stub.manpages  phosh-osk-stub.postrm  phosh-osk-stub.preinst  rules
debian/tests/: control
doc/: meson.build  phosh-osk-stub.rst  phosh-osk-stub.toml.in
po/: LINGUAS  POTFILES.in  de.po  fa.po  meson.build  phosh-osk-stub.pot
protocol/: meson.build
src/: meson.build  phosh-osk-enums.h  phosh-osk-stub.c  phosh-osk-stub.gresources.xml  pos-activation-filter.c  pos-activation-filter.h  pos-char-popup.c  pos-char-popup.h  pos-clipboard-manager.c  pos-clipboard-manager.h  pos-completer-manager.c  pos-completer-manager.h  pos-completer-priv.h  pos-completer.c  pos-completer.h  pos-completion-bar.c  pos-completion-bar.h  pos-debug-widget.c  pos-debug-widget.h  pos-emoji-picker.c  pos-emoji-picker.h  pos-enums.h  pos-hw-tracker.c  pos-hw-tracker.h  pos-input-method.c  pos-input-method.h  pos-input-surface.c  pos-input-surface.h  pos-keypad-button.c  pos-keypad-button.h  pos-keypad.c  pos-keypad.h  pos-logind-session.c  pos-logind-session.h  pos-main.c  pos-main.h  pos-osk-dbus.c  pos-osk-dbus.h  pos-osk-key.c  pos-osk-key.h  (+13 more)
src/completers/: meson.build  pos-completer-fzf.c  pos-completer-fzf.h  pos-completer-hunspell.c  pos-completer-hunspell.h  pos-completer-pipe.c  pos-completer-pipe.h  pos-completer-presage.c  pos-completer-presage.h  pos-completer-varnam.c  pos-completer-varnam.h
src/contrib/: layersurface.c  util.c
src/dbus/: meson.build
src/layouts/: cz.json  de.json  dk.json  ee.json  fi.json  gb.json  hr.json  il.json  ir.json  lt.json  lv.json  meson.build  no.json  pl.json  pt.json  ro.json  se.json  sk.json  terminal.json  tr.json  us.json
src/stylesheet/: adwaita-dark.css  adwaita-hc-light.css  common.css
src/ui/: char-popup.ui  completion-bar.ui  debug-widget.ui  emoji-picker.ui  input-surface.ui  keypad-button.ui  keypad.ui  shortcuts-bar.ui
tests/: meson.build  test-capitalize-by-template.c  test-grab-word.c  test-load-layouts.c
tools/: screenshot-all-layouts  screenshot-all-layouts.py  write-layout-info.py
